# OW

./: CMakeLists.txt  TODO
include/: menu-helper.hpp  menus.hpp
include/ow/: menu-helper.hpp
scripts/: build-cli.sh  build.ps1  build.sh  run-cli.sh
src/: main-menu.cpp  main.cpp  menu-helper.cpp
src/ow/: insert-menu.cpp  main-menu.cpp  main.cpp
